<resources>
    <string name="app_name">DIU Transport Apex</string>
    <string name="MAPS_API_KEY">AIzaSyCq051G71QAP7BiQf3gJhUrorljGyc4lNc</string>

    <string name="welcome_to">Welcome to</string>
    <string name="hint_name">Name</string>
    <string name="hint_id">Student Id</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="sign_up_text">SIGN up</string>
    <string name="search_hint">search...</string>
    <string name="cse_department">CSE Department</string>
    <string name="batch_49">Batch 52</string>
    <string name="versityName">Daffodil International University</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="hint_your_registered_email">your registered email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_has_been_sent_to">Reset Password has been sent to</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="update">Update</string>
    <string name="my_profile">My Profile</string>
    <string name="descriptions">Descriptions</string>
    <string name="cultivation_name">Cultivation Name</string>
    <string name="cultivation_description">Cultivation Description</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_cultivation">Cultivation</string>
    <string name="nav_agricultural_technology">Agricultural Technology</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_logout">Logout</string>
    <string name="uc">Under Construction ! Please try again later</string>
    <string name="logout_from_the_app">Do you want to logout from the app ?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="routes_details">Routes Details</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="creating_account_dialoge">creating account...</string>
    <string name="required">required</string>
    <string name="account_created_successfully_toast">Account created successfully</string>
    <string name="account_disabled">Account Disabled</string>
    <string name="login_success">Login Success</string>
    <string name="logging">logging...</string>
    <string name="no_result_found">No result found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="submitting_feedback">Submitting Feedback</string>
    <string name="your_feedback_added_successfully">Your feedback added successfully</string>
    <string name="something_wrong_try_again_later">Something went wrong , please try again later</string>
    <string name="authenticating">authenticating...</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="check_your_email">Check your email. Reset password has been sent to </string>
    <string name="account_banned">account banned</string>
    <string name="profile_updating">Profile Updating</string>
    <string name="please_wait">please wait ...</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="feature_in_progress">Feature in progress</string>

    <string name="dontHaveAnAccount">Don\'t have an account ? <b>REGISTER HERE</b></string>
    <string name="alreadyHaveAnAccount">Already have an account? <b>SIGN IN</b></string>
    <string name="teamMemberOne">Md Abdullah Al Mahmud</string>
    <string name="teamMemberTwo">Md Ashraful Islam</string>
    <string name="member1Phone">01303156228</string>
    <string name="member1Email">abdullah15-12316@diu.edu.bd</string>
    <string name="member2Phone">01303156228</string>
    <string name="member2Email">ashraful15-12271@diu.edu.bd</string>
    <string name="mailSubject">DIU Transportation Apex Report</string>
    <string name="title_activity_bus">BusActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>