<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.AccountRegistrationActivity"
    android:background="@drawable/authencitaion_background"
    >
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".75"
        android:background="@color/green_A400"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/app_logo"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            android:backgroundTint="@color/white"
            >
            <EditText
                android:id="@+id/registrationName"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:drawableTint="@color/white"
                android:ems="10"
                android:hint="@string/hint_name"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="24dp"
            >
            <EditText
                android:id="@+id/registrationID"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:drawableTint="@color/white"
                android:ems="10"
                android:hint="@string/hint_id"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="24dp"
            >
            <EditText
                android:id="@+id/registrationEmail"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:ems="10"
                android:background="@android:color/transparent"
                android:hint="@string/hint_email"
                android:inputType="textPersonName"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            android:backgroundTint="@color/white"
            app:passwordToggleTint="@color/white"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="24dp">
            <EditText
                android:id="@+id/registrationPassword"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:ems="10"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            app:passwordToggleTint="@color/white"
            app:passwordToggleEnabled="true"
            android:backgroundTint="@color/white"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/registrationConfirmPassword"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:ems="10"
                android:background="@android:color/transparent"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up_text"
            android:textColor="@color/primaryColor"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginForgotPasswordTV" />

        <TextView
            android:id="@+id/alreadyHaveAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/alreadyHaveAnAccount"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="115dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>