<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileActivity">
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:clickable="true"
                android:drawablePadding="@dimen/_30sdp"
                android:drawableTint="@color/primaryColor"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/_7sdp"
                android:text="@string/your_email"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/myProfileEmailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/feedback_edt_stroke"
                android:hint="@string/hint_email"
                android:enabled="false"
                android:alpha=".45"
                android:textColor="@color/black"
                android:padding="10dp" />
            <TextView
                android:id="@+id/myProfileUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:clickable="true"
                android:drawablePadding="@dimen/_30sdp"
                android:drawableTint="@color/primaryColor"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/_7sdp"
                android:text="@string/your_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/myProfileNameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/feedback_edt_stroke"
                android:hint="@string/hint_name"
                android:textColor="@color/black"
                android:padding="10dp" />

            <TextView
                android:id="@+id/myProfileChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                android:drawablePadding="@dimen/_30sdp"
                android:drawableTint="@color/primaryColor"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/_7sdp"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/profileUpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/update"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--  <TextView
          android:id="@+id/myProfileUserName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:fontFamily="@font/montserrat_alternates"
          android:text="Mr Demo User"
          android:textColor="@color/black"
          android:textSize="@dimen/_12sdp"
          app:layout_constraintEnd_toEndOf="@+id/myProfileUserImage"
          app:layout_constraintStart_toStartOf="@+id/myProfileUserImage"
          app:layout_constraintTop_toBottomOf="@+id/myProfileUserImage" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/primaryColor"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profileBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/profileBackButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--  <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/myProfileUserImage"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:layout_marginTop="24dp"
          android:src="@drawable/app_logo"
          app:civ_border_color="@color/primaryColor"
          app:civ_border_width="1dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />-->


</androidx.constraintlayout.widget.ConstraintLayout>